Composer: Fix Attach Menu and Bot Menu buttons overlap (#2182)

--- a/src/components/middle/composer/Composer.scss
+++ b/src/components/middle/composer/Composer.scss
@@ -251,7 +251,7 @@
 
   .input-scroller {
     margin-right: 0.5rem;
-    padding-right: 2.5rem;
+    padding-right: 0.25rem;
   }
 
   > .Spinner {
